# kafka-cli-rs

./: Cargo.toml  Dockerfile  docker-compose.yaml
cli/: Cargo.toml
cli/src/: main.rs
crates/args/src/: cli_parser.rs
crates/kafka-config/: Cargo.toml
crates/kafka-config/resources/: .kafka.example.token.yaml  .kafka.example.yaml
crates/kafka-config/src/: consumer.rs  into.rs  lib.rs
crates/kafka-consumer/: Cargo.toml
crates/kafka-consumer/src/: lib.rs
crates/kafka-producer/: Cargo.toml
crates/kafka-producer/src/: lib.rs
crates/schema-registry/: Cargo.toml
crates/schema-registry/src/: lib.rs
resources/: consumer.yaml
test/: consumer.yaml  key.avro  key.json  msg.avro  msg.json  producer.yaml
