[workspace]
members = ["cli", "crates/*"]

[workspace.dependencies]
env_logger = "0.10"
log = "0.4"
url = { version = "2", features = ["serde"] }
config = "0.13"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
anyhow = { version = "1" }
apache-avro = "0.16"
schema_registry_converter = { git = "https://github.com/gklijs/schema_registry_converter", ref = "13c946022dddf8956215a44f229d4d1cda2c2367" }
opentelemetry = "0.20"
tracing = { version = "0.1", features = ["log"] }
kafka-config = { path = "../crates/kafka-config" }
rdkafka = { version = "0.34", features = ["ssl-vendored"] }
uuid = { version = "1", features = ["serde", "v4"] }
# [patch.crates-io]
# apache-avro = { version = "0.15" }
