[workspace]
members = ["cli", "crates/*"]

[workspace.dependencies]
pretty_assertions = "1"
env_logger = "0.10"
log = "0.4"
url = { version = "2", features = ["serde"] }
config = "0.13"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
anyhow = { version = "1" }
apache-avro = "0.16"
schema_registry_converter = "4"
opentelemetry = "0.21"
tracing = { version = "0.1", features = ["log"] }
kafka-config = { path = "../crates/kafka-config" }
rdkafka = { version = "0.36" }
uuid = { version = "1", features = ["serde", "v4"] }