[package]
name = "cli"
version = "0.1.1"
edition = "2021"

[[bin]]
name = "kafka-cli"
path = "src/main.rs"

[dependencies]
args = {path = "../crates/args"}
kafka-config = {path = "../crates/kafka-config"}
kafka-consumer = {path = "../crates/kafka-consumer"}
kafka-producer = {path = "../crates/kafka-producer"}
schema-registry ={ path = "../crates/schema-registry"}
env_logger = {workspace = true}
log = {workspace = true}
clap = {workspace = true}
tokio = {version = "1", features = ["full"]}
serde = {workspace = true}
serde_json = {workspace = true}
apache-avro = {workspace = true}