[package]
edition = "2021"
name = "kafka-config"
version = "0.2.0"

[dependencies]
anyhow = { workspace = true }
config = { workspace = true }
log = { workspace = true }
rdkafka = { workspace = true }
serde = { workspace = true, features = ["derive"] }
url = { workspace = true }
schema_registry_converter = { workspace = true, features = [] }
[dev-dependencies]
serial_test = "2"
