[package]
edition = "2021"
name = "kafka-consumer"
version = "0.1.0"

[dependencies]
anyhow = { workspace = true }
apache-avro = { workspace = true }
kafka-config = { path = "../kafka-config" }
log = { workspace = true }
opentelemetry = { workspace = true }
pretty_assertions = { workspace = true }
rdkafka = { workspace = true }
schema-registry = { path = "../schema-registry" }
schema_registry_converter = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
