[package]
name = "kafka-producer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = {workspace = true}
rdkafka = {workspace = true}
url = {workspace = true}
kafka-config = {path = "../kafka-config"}
schema-registry = {path = "../schema-registry"}
schema_registry_converter = { workspace = true }
serde = {workspace = true}
apache-avro = {workspace = true}
tracing = {workspace = true}
opentelemetry = {workspace = true}
serde_json = {workspace = true}
pretty_assertions = "1"
[dev-dependencies]
uuid = { version = "1", features = ["v4", "serde"] }